# rust-lambda-example

./: .gitignore  .ports.env  Cargo.toml  Dockerfile  README.md  bonnie.toml  build.sh  docker-compose.yml  netlify.toml
public/: index.html
