[package]
name = "graphql_serverless"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2.0"
tokio = { version = "1.8.4", features = ["macros"] }

[[bin]]
name = "serverless"
path = "src/main.rs"
